--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -7,10 +7,10 @@
   type: upstream
   upstream: "backend:http"
 
-"https://www.{default}/store":
+"https://www.{default}":
   type: upstream
-  upstream: "backend:http"
+  upstream: "storefront:http"
 
-"https://{default}/store":
+"https://{default}":
   type: redirect
-  to: "https://www.{default}/store"
+  to: "https://www.{default}"
