--- a/backend/.environment
+++ b/backend/.environment
@@ -13,7 +13,7 @@ export JWT_SECRET=$PLATFORM_PROJECT_ENTROPY
 export COOKIE_SECRET=$PLATFORM_PROJECT_ENTROPY
 
 # export ADMIN_CORS (admin dashboard)
-# export STORE_CORS (storefront dashboard)
+export STORE_CORS=$(echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep https | grep www)
 
 # TYPEORM_CONNECTION=postgres
 # TYPEORM_URL=<DATABASE_URL>
