--- a/backend/.environment
+++ b/backend/.environment
@@ -14,8 +14,8 @@ export COOKIE_SECRET=$PLATFORM_PROJECT_ENTROPY
 
 # export ADMIN_CORS (admin dashboard)
 STORE_CORS=$(echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep https | grep www)
-export STORE_CORS="${STORE_CORS::-1}"
-
+export STORE_CORS_2="${STORE_CORS::-1}"
+export STORE_CORS="https://www.pr-2-tcs3n7y-656bn435vw34k.eu-5.platformsh.site"
 
 # TYPEORM_CONNECTION=postgres
 # TYPEORM_URL=<DATABASE_URL>
