--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,17 @@
 /node_modules
 yarn-error.log
 
+.idea
+
+coverage
+
+!src/**
+
+./tsconfig.tsbuildinfo
+package-lock.json
+yarn.lock
 medusa-db.sql
+build
 sqlite
 
 .yarn
