--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "start": "cross-env npm run build && medusa start",
     "start:custom": "cross-env npm run build && node --preserve-symlinks index.js",
     "dev": "cross-env npm run build && medusa develop",
-    "build:admin": "cross-env medusa-admin build"
+    "build:admin": "cross-env medusa-admin build",
+    "medusa": "cross-env medusa"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.21.4",
