--- a/backend/.environment
+++ b/backend/.environment
@@ -4,6 +4,7 @@ DB_HOST=$(echo $PLATFORM_RELATIONSHIPS | base64 --decode | jq -r '.pg[0].host')
 DB_PORT=$(echo $PLATFORM_RELATIONSHIPS | base64 --decode | jq -r '.pg[0].port')
 DB_NAME=$(echo $PLATFORM_RELATIONSHIPS | base64 --decode | jq -r '.pg[0].path')
 export DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+
 export DATABASE_TYPE=postgres
 
 REDIS_HOST=$(echo $PLATFORM_RELATIONSHIPS | base64 --decode | jq -r '.redis[0].host')
@@ -14,9 +15,10 @@ export JWT_SECRET=$PLATFORM_PROJECT_ENTROPY
 export COOKIE_SECRET=$PLATFORM_PROJECT_ENTROPY
 
 # export ADMIN_CORS (admin dashboard)
-STORE_CORS='$(echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep www | grep https)'
-STORE_CORS='${STORE_CORS::-1}'
-export STORE_CORS
+# STORE_CORS=$8echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep https | grep www`
+# STORE_CORS="${STORE_CORS::-1}"
+# export STORE_CORS
+
 
 # TYPEORM_CONNECTION=postgres
 # TYPEORM_URL=<DATABASE_URL>
