--- a/backend/.platform.app.yaml
+++ b/backend/.platform.app.yaml
@@ -13,33 +13,24 @@ variables:
 
 hooks:
   build: |
-    printf "\nInstalling dependencies.\n"
     corepack yarn global add @medusajs/medusa-cli
     corepack yarn install --immutable
-
-    printf "\nBuilding the app.\n"
     corepack yarn run build
+  deploy: |
     corepack yarn run medusa telemetry --disable
-
-  # deploy: |
-  #   printf "\nMigrations\n"
-  #   export MEDUSA_DISABLE_TELEMETRY=1
-  #   corepack yarn run medusa telemetry --disable
-  #   corepack yarn run medusa migrations run
+    corepack yarn run medusa migrations run
 
 # The configuration of app when it is exposed to the web.
 web:
   commands:
     start: |
-      # Production start on all environments
-      corepack yarn run medusa migrations run
       corepack yarn run medusa start -p=$PORT
 
 # The size of the persistent disk of the application (in MB).
 disk: 1024
 
 relationships:
-  database: "pg:postgresql"
+  pg: "postgres:postgresql"
   redis: "redis:redis"
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
