--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.21.4",
+    "@medusajs/admin": "^4.0.1",
     "@medusajs/cache-inmemory": "^1.8.4",
     "@medusajs/cache-redis": "^1.8.4",
     "@medusajs/event-bus-local": "^1.9.1",
