--- a/backend/.platform.app.yaml
+++ b/backend/.platform.app.yaml
@@ -15,6 +15,7 @@ hooks:
   build: |
     corepack yarn global add @medusajs/medusa-cli
     corepack yarn install --immutable
+    corepack yarn run clean
     corepack yarn run build
     corepack yarn run build:admin
   deploy: |
