--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -3,10 +3,15 @@
 # Each route describes how an incoming URL is going
 # to be processed by Platform.sh.
 
-"https://api.{default}":
+"https://medusa.{default}":
   type: upstream
   upstream: "backend:http"
   id: api
+
+"https://admin.{default}":
+  type: redirect
+  to: "https://medusa.{default}/app"
+  id: admin
 
 "https://www.{default}":
   type: upstream
