--- a/storefront/.environment
+++ b/storefront/.environment
@@ -1,5 +1,5 @@
 # Your Medusa backend, should be updated to where you are hosting your server. Remember to update CORS settings for your server. See – https://docs.medusajs.com/usage/configurations#storefront-cors
-export NEXT_PUBLIC_MEDUSA_BACKEND_URL=$(echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep api | grep https)
+export NEXT_PUBLIC_MEDUSA_BACKEND_URL=$(echo $PLATFORM_ROUTES | base64 -d | jq -r 'paths(objects) as $p | select(getpath($p) | .id=="api") | $p[0]')
 
 # Your Stripe public key. See – https://docs.medusajs.com/add-plugins/stripe
 # NEXT_PUBLIC_STRIPE_KEY=
