--- a/backend/.environment
+++ b/backend/.environment
@@ -15,9 +15,9 @@ export JWT_SECRET=$PLATFORM_PROJECT_ENTROPY
 export COOKIE_SECRET=$PLATFORM_PROJECT_ENTROPY
 
 # export ADMIN_CORS (admin dashboard)
-# STORE_CORS=$8echo $PLATFORM_ROUTES  | base64 --decode | jq -r 'keys[]' | grep https | grep www`
-# STORE_CORS="${STORE_CORS::-1}"
-# export STORE_CORS
+STORE_CORS=$(echo $PLATFORM_ROUTES | base64 -d | jq -r 'paths(objects) as $p | select(getpath($p) | .id=="storefront") | $p[0]')
+STORE_CORS="${STORE_CORS::-1}"
+export STORE_CORS
 
 
 # TYPEORM_CONNECTION=postgres
